# systick-timer-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: README.md  basic_time.rs  embassy_time.rs
src/: embassy_driver.rs  lib.rs  timer.rs
src/timer/: stress_test.rs
systick-timer/: Cargo.toml
systick-timer/examples/: basic_time.rs  embassy_time.rs
systick-timer/src/: lib.rs  timer.rs
systick-timer/src/timer/: stress_test.rs
testapps/: README.md  run_all_tests.py
testapps/feather-m0-board/: Cargo.toml  build.rs  memory.x
testapps/feather-m0-board/.cargo/: config.toml
testapps/feather-m0-board/src/: lib.rs
testapps/stm32f412-nucleo/: Cargo.toml  README.md  memory.x  run_all_tests.py
testapps/stm32f412-nucleo/.cargo/: config.toml
testapps/stm32f412-nucleo/src/: lib.rs
testapps/timer_stress/: Cargo.toml  README.md
testapps/timer_stress/src/: lib.rs
