[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Kaido Kert <kaidokert@gmail.com>"]
name = "feather-m0-board"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "timer_stress"
path = "src/bin/timer_stress.rs"
test = false

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rtt-target = { version = "0.6", features = ["log"] }
panic-rtt-target = { version = "0.2" }
cortex-m-semihosting = "0.5"
log = "0.4"
critical-section = "1"

# HAL crate
feather_m0 = "0.19"
# Crate under test
systick-timer = { path = "../../systick-timer" }

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
