[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Kaido Kert <kaidokert@gmail.com>"]
name = "stm32f412-nucleo"
edition = "2024"
version = "0.1.0"


[[bin]]
name = "timer_stress"
path = "src/bin/timer_stress.rs"
test = false

[lib]
harness = false


[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rtt-target = { version = "0.6", features = ["log"] }
panic-rtt-target = { version = "0.2" }
cortex-m-semihosting = "0.5"
log = "0.4"
critical-section = "1"

# HAL crate
stm32f4xx-hal = { version = "0.23", features = ["stm32f412"] }
# Crate under test
systick-timer = { path = "../../systick-timer" }

[features]
# Timer frequency configurations
freq-50-50 = []      # TIM2=50kHz, TIM5=50kHz (baseline)
freq-50-49999 = []   # TIM2=50kHz, TIM5=49.999kHz
freq-50-50001 = []   # TIM2=50kHz, TIM5=50.001kHz

# Interrupt blocking configurations
block-none = []      # No critical sections (current state)
block-tim2 = []      # TIM2 uses critical_section when calling timer
block-tim5 = []      # TIM5 uses critical_section when calling timer
block-both = []      # Both TIM2 and TIM5 use critical_section

# Test duration configurations
duration-short = []  # 5 second test (quick verification)
duration-full = []   # 45+ second test (catch 64-bit overflow issues)

# Timer reload configurations (to accelerate overflow testing)
reload-normal = []   # 0xFFFFFF reload (~51 hours to overflow)
reload-small = []    # 0x3FF reload (~40 seconds to overflow at 100MHz)

# Interrupt priority configurations (8 possible combinations)
# Format: priority-[SYSTICK][TIM2][TIM5] where H=High(0), M=Medium(1), L=Low(2)
priority-equal = []     # All equal priority (1,1,1) - default behavior
priority-shh = []       # SysTick high, TIM2&5 high (0,1,1)
priority-smh = []       # SysTick high, TIM2 med, TIM5 high (0,1,0)
priority-shl = []       # SysTick high, TIM2 high, TIM5 low (0,0,2)
priority-sml = []       # SysTick high, TIM2 med, TIM5 low (0,1,2)
priority-slm = []       # SysTick high, TIM2 low, TIM5 med (0,2,1)
priority-sll = []       # SysTick high, TIM2&5 low (0,2,2)
priority-reverse = []   # TIM2&5 high, SysTick low (2,0,0)

# Default features
default = ["freq-50-50", "block-none", "duration-short", "reload-normal", "priority-equal"]

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
